...
        static let pink = "SmallPinkBackground"
        static let red = "SmallRedBackground"
        static let blue = "SmallBlueBackground"
    }
    
    enum ButtonNames {
        static let background = "BackgroundButton"
        static let card = "CardButton"
        static let arrow = "ArrowButton"
    }
    
    enum FontNames {
        static let fingerPaint = "FingerPaint-Regular"
        static let courgette = "Courgette-Regular"
...
