...
    func selectSavedNumberOption() {
        switch cardModel.cardSetSaver.totalCards {
        case 8:
            numberOptions[0].isSelected = true
        case 16:
            numberOptions[1].isSelected = true
        case 24:
            numberOptions[2].isSelected = true
        case 32:
            numberOptions[3].isSelected = true
        default:
            numberOptions[4].isSelected = true
        }
...
